--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/main/app.js",
-    "start:dev": "nodemon src/main/app.js"
+    "start": "node src/main/server/server.js",
+    "start:dev": "nodemon src/main/server/server.js"
   },
   "author": "",
   "license": "ISC",
